--- a/css/site.css
+++ b/css/site.css
@@ -173,7 +173,6 @@ p {
     nav .nav-links {
         flex-direction: column;
         align-items: flex-start;
-        width: 100%;
     }
 
     nav .nav-links li {
@@ -226,7 +225,6 @@ p {
     nav .nav-links {
         flex-direction: column;
         align-items: flex-start;
-        width: 100%;
     }
 
     nav .nav-links li {
